# rooster

./: .gitignore  Cargo.toml  posts.db
src/: db.rs  hm.rs  main.rs
