[package]
name = "sol"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
chrono = { version = "0.4.39", features = ["serde"] }
env_logger = "0.11.6"
serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1.13.2", features = ["v4"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
